# game-engine

./: Cargo.toml  flight_telemetry.csv
assets/shaders/: atmosphere.wgsl  planet.wgsl  terrain_compute.wgsl  terrain_compute_3d.wgsl  terrain_hyperreal.wgsl
docs/: CHUNKED_TERRAIN_STATUS.md  FIDELITY_ROADMAP.md
src/: lib.rs  main.rs
src/net/: client.rs  mod.rs  tables.rs
src/physics/: constants.rs  fluids.rs  gravity.rs  materials.rs  mod.rs  thermodynamics.rs
src/plugins/: agent_eyes.rs  atmosphere.rs  camera.rs  chunked_terrain.rs  climate.rs  discovery.rs  economy.rs  ecosystem.rs  geology.rs  gpu_terrain.rs  hyperreal_terrain.rs  indicator.rs  mod.rs  observation.rs  physics.rs  planet.rs  player.rs  quadtree.rs  server.rs  simulation.rs  speculative_physics.rs  sun.rs  technology.rs  telemetry.rs  terrain.rs  trajectory.rs  ui.rs  vegetation.rs
src/plugins/creature/: behavior.rs  meshes.rs  mod.rs  species.rs
src/plugins/voxel/: chunk.rs  density.rs  dual_contouring.rs  mod.rs  octree.rs
tests/: quadtree_regression.rs
